5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1644_2711.log
== TEST (2019-04-04 19:57:24) 
-- CODE:
#Entradas 
valor = int(input("Valor disponivel: "))
quant = int(input("Quantidades de tickets do RU: "))
preco = float(int("Valor dos tickets: "))
passe = int(input("Quantidade de passes de onibus: "))
val = float(input("Valor dos passes: "))
soma = (quant * preco) + (passe * valor)

if(soma <= valor):
	print("SUFICIENTE")
else:
	print(INSUFICIENTE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco = float(int("Valor dos tickets: "))
ValueError: invalid literal for int() with base 10: 'Valor dos tickets: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:57:50) 
-- CODE:
#Entradas 
valor = int(input("Valor disponivel: "))
quant = int(input("Quantidades de tickets do RU: "))
preco = float(input("Valor dos tickets: "))
passe = int(input("Quantidade de passes de onibus: "))
val = float(input("Valor dos passes: "))
soma = (quant * preco) + (passe * valor)

if(soma <= valor):
	print("SUFICIENTE")
else:
	print(INSUFICIENTE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(INSUFICIENTE)
NameError: name 'INSUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:58:14) 
-- CODE:
#Entradas 
valor = int(input("Valor disponivel: "))
quant = int(input("Quantidades de tickets do RU: "))
preco = float(input("Valor dos tickets: "))
passe = int(input("Quantidade de passes de onibus: "))
val = float(input("Valor dos passes: "))
soma = (quant * preco) + (passe * valor)

if(soma <= valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:59:00) 
-- CODE:
#Entradas 
valor = int(input("Valor disponivel: "))
quant = int(input("Quantidades de tickets do RU: "))
preco = float(input("Valor dos tickets: "))
passe = int(input("Quantidade de passes de onibus: "))
val = float(input("Valor dos passes: "))
soma = (quant * preco) + (passe * val)

if(soma <= valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.157246
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
